# ruber

./: .gitignore  .~lock.result.xlsx#  Cargo.toml  README.md
src/: main.rs
src/browser/: client.rs
src/case/: auth.at  login.rs
src/case/script/: login.js
src/examples/: index.rub  lyoni.rub  main.rub  recorded.rub  ruber.yaml
src/examples/actions/: login.rub
src/examples/forstaff/: login.rub
src/grammars/: core.pest
src/util/: client.rs  command.rs  config.rs  fs.rs  mod.rs  parser.rs  recorder.rs
src/util/command/: dom.rs  flow.rs  nav.rs
