[package]
name = "ruber"
version = "0.1.0"
edition = "2024"

[dependencies]
fantoccini = "0.21.5"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
xlsxwriter = "0.6.1"
pest = "2.7"
pest_derive = "2.7"
serde_yaml = "0.9.34"
serde = "1.0.228"
clap = { version = "4.5.31", features = ["derive"] }
